fixed margin spacing between widget area and contact form on submit

--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -11,8 +11,8 @@
 		padding-top:1rem;
 		padding-bottom:2.25rem;
 		width: 100vw;
-		background-size:cover;
-		background-repeat: no-repeat;
+		background-size:contain;
+
 		p{
 			padding-left:1rem;
 			padding-right:1rem;
@@ -129,7 +129,7 @@
 		flex-direction: column;
 		position: absolute;
 		width:95%;
-		top: 46%;
+		top: 46.5%;
 		left: 2.5%;
 	}
 
